# rustyathena

./: .gitignore
athena_mi/: Cargo.toml
athena_mi/src/: bstest.rs  cliparameters.rs  fixedbandwidthmi.rs  main.rs  normalize.rs  readwrite.rs  splinemi.rs
test/: accuracy_benchmark.r  noise.r  noise_benchmark.r  speed_benchmark.r
